<resources>
    <string name="app_name">Peak Productive</string>
    <string name="nav_card">Flash Card</string>
    <string name="nav_task">Tasks</string>
    <string name="nav_timer">Pomodoro</string>
    <string name="detail">Details</string>
    <string name="start_text">Start</string>
    <string name="pause_text">Pause</string>
    <string name="title">Title</string>
    <string name="todo">To do</string>
    <string name="priority">Priority:</string>

    <string name="reset_text">Reset</string>
    <string name="relax_text">Relax</string>
    <string name="update_text">Update</string>
    <string name="description">Description</string>
    <string name="add_text">Add</string>
    <string name="delete">Delete</string>
    <string name="tag">Topic or Category</string>

    <string name="cardDetail_text">Card Detail</string>
    <string name="taskDetail_text">Task Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>