<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditCardDetailsActivity">


    <TextView
        android:id="@id/card_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:text="@string/cardDetail_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?android:textColorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_cardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:background="@drawable/priority_drawable"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_cardDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:background="@drawable/priority_drawable"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxHeight="300dp"
        android:minHeight="200dp"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp" />



    <Button
        android:id="@+id/btn_done"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="?attr/colorPrimary"
        android:text="@string/add_text"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/btn_deleteFlashCard"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="?attr/colorPrimary"
        android:text="@string/delete"
        app:cornerRadius="20dp" />

</androidx.appcompat.widget.LinearLayoutCompat>