<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditTaskDetailsActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/taskDetail_text"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/priority_drawable"
        android:ems="10"
        android:hint="@string/todo"
        android:inputType="textPersonName"
        android:maxHeight="60dp"
        android:minHeight="50dp"
        android:padding="10dp"
        android:scrollbars="vertical" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/priority_drawable" />

    <Button
        android:id="@+id/btn_addUpdate_task"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:text="@string/add_text"
        app:cornerRadius="10dp" />
</androidx.appcompat.widget.LinearLayoutCompat>